...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="692"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="lyd-5p-pwQ">
                                <rect key="frame" x="62.333333333333343" y="266.66666666666669" width="289.33333333333326" height="34"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IPS-rc-xWz">
                                        <rect key="frame" x="0.0" y="0.0" width="73.333333333333329" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" red="0.027450980390000001" green="0.4549019608" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="cs7-y7-8Xw">
...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="KF8-hv-3Nz">
                                <rect key="frame" x="62.333333333333343" y="189" width="289.66666666666663" height="34"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MxL-uJ-7O0">
                                        <rect key="frame" x="0.0" y="0.0" width="40.666666666666664" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" red="0.027450980392156862" green="0.45490196078431372" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="Email" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="wio-dh-c0t">
...
                                        <color key="backgroundColor" red="0.027450980390000001" green="0.4549019608" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="gFr-Rz-Kgz"/>
                                            <constraint firstAttribute="width" constant="110" id="gIg-R9-Tn7"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                        <state key="normal" title="Sign In">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <segue destination="0EV-7Q-vVM" kind="show" identifier="Success" id="ySA-Yy-v0F"/>
                                        </connections>
                                    </button>
...
                                <color key="backgroundColor" red="0.027450980390000001" green="0.4549019608" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="43" id="kth-j8-C0k"/>
                                    <constraint firstAttribute="width" constant="121" id="wDV-ee-wh4"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="20"/>
                                <state key="normal" title="Submit">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="clickSubmit:" destination="0EV-7Q-vVM" eventType="touchDown" id="ivH-en-sRR"/>
                                    <segue destination="mqd-vX-KIR" kind="show" identifier="OrderSuccess" id="oW7-sC-wNU"/>
                                </connections>
...
            <objects>
                <viewController id="mqd-vX-KIR" customClass="OrderVC" customModule="WeTest_Demo" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="4Ap-ce-eQ3">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="692"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Order Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rNj-E9-FRJ">
                                <rect key="frame" x="16" y="18" width="146" height="45"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="146" id="5To-X5-fZR"/>
                                    <constraint firstAttribute="height" constant="45" id="WRr-11-WLN"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="25"/>
...
