...
        if identifier == "Success"{
            if email.hasText && password.hasText  {
                tips.text = "Log Out"
                print("Login Status:",String(tips.text ?? "none"))
                return true
            }else{
                tips.text = "Login Failed"
                return false
            }
        }
        return true
        
    }
...
